# diverse

./: .gitignore  IDEAS.md  LOG.md  README.md  figures  pyproject.toml
core/: data.py  rm.py  utils.py
dumps/: bootstrap_acc.parquet  bootstrap_small_acc.parquet
llama/: generation.py  model.py
repl/: prelim.py  repl.py
slurm/: gen.sh  rm_acc.py  sample_math.py  sample_math_2.py  sanity.py  sanity_small.py
