[project]
name = "diverse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blobfile>=3.0.0",
    "fairscale>=0.4.13",
    "fire>=0.7.0",
    "tiktoken==0.4.0",
    "torch>=2.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "llama",
  "llama.*",
  "core",
  "core.*",
]
