[project]
name = "diverse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blobfile>=3.0.0",
    "fairscale>=0.4.13",
    "fire>=0.7.0",
    "math-verify>=0.7.0",
    "sacrebleu>=2.5.1",
    "sentence-transformers>=4.1.0",
    "sympy>=1.13.1",
    "ipykernel>=6.29.5",
    "tiktoken==0.8.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "llama",
  "llama.*",
  "core",
  "core.*",
]
